// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menus parses given page 1`] = `
Object {
  "cafeteria": "학생회관",
  "meals": Array [],
}
`;

exports[`menus parses given page 2`] = `
Object {
  "cafeteria": "기숙사(919동)",
  "meals": Array [],
}
`;

exports[`menus parses given page 3`] = `
Object {
  "cafeteria": "기숙사(901동)",
  "meals": Array [
    Object {
      "계란버터비빔밥/맛살야채볶음": 3000,
      "토스트,씨리얼,우유": 2500,
    },
    Object {
      "불고기버섯전골": 4000,
      "치킨마요덮밥": 4000,
      "탄탄멘": 3500,
    },
    Object {
      "고깃집돌솥밥/두부구이": 4000,
      "짜계치/교자만두": 4000,
    },
  ],
}
`;

exports[`menus parses given page 4`] = `
Object {
  "cafeteria": "전망대(농대)",
  "meals": Array [
    undefined,
    Object {
      "갈비찜": 4000,
      "새우커리": 3500,
    },
  ],
}
`;

exports[`menus parses given page 5`] = `
Object {
  "cafeteria": "두레미담",
  "meals": Array [
    undefined,
    Object {
      "잡곡밥,돈육김치찌개,안동찜닭,오징어링튀김,청포묵김무침,건새우풋고추조림,깍두기,그린샐러드,오늘의차": 6000,
    },
    Object {
      "잡곡밥,건새우아욱국,매콤닭볶음탕,짜장떡볶이,온두부찜*양념간장,흑임자숙주나물,김치,그린샐러드,오늘의차": 6000,
    },
  ],
}
`;

exports[`menus parses given page 6`] = `
Object {
  "cafeteria": "서당골(사범대)",
  "meals": Array [
    undefined,
    Object {
      "굴소스햄야채볶음밥&초코와플": 4000,
      "바몬드카레라이스&비빔만두": 4500,
    },
    Object {
      "하와이안함박스테이크&계란f": 4500,
    },
  ],
}
`;

exports[`menus parses given page 7`] = `
Object {
  "cafeteria": "아름드리(예술)",
  "meals": Array [
    undefined,
    Object {
      "라면": 3000,
      "함박스테이크&갈릭소스": 4500,
      "해물볶음우동&순살치킨가스": 5500,
    },
    Object {
      "스팸김치볶음밥&달걀후라이": 4500,
    },
  ],
}
`;

exports[`menus parses given page 8`] = `
Object {
  "cafeteria": "감골식당",
  "meals": Array [
    undefined,
    Object {
      "김치나베돈가스+미니우동": 4000,
      "청국장찌개+미트볼조림": 3000,
      "콩고기야채불고기,마파두부,쫄면채소무침,연근모듬콩조림,깻잎쌈&당근스틱,유부호박된장국,옥수수죽,백김치,diy샐러드,과일,음료🥗": 6500,
    },
    Object {
      "마라치킨마요덮밥": 4000,
    },
  ],
}
`;

exports[`menus parses given page 9`] = `
Object {
  "cafeteria": "동원관",
  "meals": Array [],
}
`;

exports[`menus parses given page 10`] = `
Object {
  "cafeteria": "자하연",
  "meals": Array [],
}
`;

exports[`menus parses given page 11`] = `
Object {
  "cafeteria": "220동",
  "meals": Array [
    undefined,
    Object {
      "[뚝]치즈미트스파게티*해시브라운": 4500,
      "설렁탕&계란장조림": 4000,
    },
    Object {
      "돈가스덮밥&갈비만두찜": 4500,
      "비빔칼국수&갈비만두찜": 4000,
    },
  ],
}
`;

exports[`menus parses given page 12`] = `
Object {
  "cafeteria": "301동(교수)",
  "meals": Array [
    undefined,
    Object {
      "닭갈비덮밥,사각어묵국": 6000,
      "사골곰탕,파래김구이&양념장": 5500,
    },
  ],
}
`;

exports[`menus parses given page 13`] = `
Object {
  "cafeteria": "302동",
  "meals": Array [],
}
`;

exports[`menus parses given page 14`] = `
Object {
  "cafeteria": "301동",
  "meals": Array [
    undefined,
    undefined,
    Object {
      "고기소보로덮밥": 3500,
      "낙지돌솥비빔밥": 4500,
      "돈육간장덮밥": 4300,
      "등심돈가스": 4000,
      "뚝배기불고기": 4800,
      "유니짜장면": 3500,
      "차돌짬뽕": 5500,
      "치킨스테이크": 4800,
    },
  ],
}
`;

exports[`menus parses given page 15`] = `
Object {
  "cafeteria": "공깡",
  "meals": Array [
    undefined,
    undefined,
    Object {
      "고기 소보로 볶음밥": 3500,
      "공간 짜장면": 3500,
      "공간 짬뽕/밥": 3500,
      "공간 짬짜면": 4500,
      "돈까스 비빔면": 5200,
      "부대짬뽕": 5200,
      "사천 짜장면": 3500,
      "순두부 만두 짬뽕": 4800,
      "유린 만두": 2000,
      "짜장면/짬뽕 곱빼기": 4000,
      "짬짜탕면": 6500,
      "치킨탕수육": 7000,
    },
  ],
}
`;

exports[`menus parses given page 16`] = `
Object {
  "cafeteria": "두레미담(주문식)",
  "meals": Array [
    undefined,
    undefined,
    Object {
      "7선산채비빔밥": 13000,
      "고등어구이정식": 11000,
      "고등어무조림정식": 10000,
      "낙지순두부": 10000,
      "능이버섯삼계탕": 16000,
      "들깨칼국수&왕만두": 10000,
      "묵은지김치찌개": 8000,
      "미담삼계탕": 13000,
      "삼겹보쌈정식": 13000,
      "장어한마리덮밥정식": 15000,
      "전복삼계탕": 19500,
      "전복한우등심샤브샤브": 25000,
      "전복해물된장찌개": 12000,
      "차돌된장찌개": 8000,
      "철판제육볶음정식": 13000,
      "철판주꾸미볶음정식": 13000,
      "초계국수&왕만두": 10000,
      "한우등심샤브샤브": 19000,
      "한우불고기정식": 17000,
      "해물파전": 15000,
      "황태구이정식": 12000,
    },
  ],
}
`;
